Fixing hardcoded string values

--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -17,6 +17,6 @@
     <!-- Opção de Sair -->
     <item
         android:id="@+id/menu_logout"
-        android:title="Sair" />
+        android:title="@string/button_sair_label" />
 
 </menu>
