add: adding new elements in activities
in form activity, was added the spinner for boolean values.
in main activity, was added elements for show list of user's incidents.

--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -121,6 +121,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
+    <Spinner
+        android:id="@+id/spinner_boolean"
+        android:layout_width="344dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="19dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_value" />
+
     <!-- Extended Floating Action Button para "Inserir" no canto inferior direito -->
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab_voltar"
